--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ p {
 
 .nav {
     width: 70%;
-    background-color: rgba(172, 172, 172, 0.3);
+    background-color: rgba(36, 29, 64);
     /* Only background is transparent */
     height: 70px;
     border-radius: 15px;
@@ -78,6 +78,12 @@ p {
     background-color: #FFD633;
 }
 
+.nav-svg{
+    z-index: -1;
+    position: absolute;
+    left: 67%;
+    top: -8.5%;
+}
 .banner {
     height: 100vh;
     margin-top: 90px;
@@ -97,7 +103,8 @@ p {
     text-align: center;
     line-height: 20px;
 
-} 
+}
+
 .join-button {
     display: inline-block;
     padding: 15px 40px;
@@ -117,4 +124,62 @@ p {
 .join-button:hover {
     transform: rotate(7.5deg) scale(1.05);
     box-shadow: 4px 4px 0 black;
+}
+
+/* Vector */
+
+.spiral {
+    position: relative;
+    left: 56.5%;
+    bottom: 1%;
+}
+
+.buyAndJoin{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    
+}
+
+.buy-now, .join-now{
+    background: none;
+    z-index: -1;
+    border: none;
+}
+.buy-now img , .join-now img{
+    width: 187px;
+    height: 52px;
+}
+.join-now img {
+    width: 157.89px;
+}
+.buy-now :hover, .join-now :hover{
+   cursor: pointer;
+}
+.banner-svg-1{
+    position: absolute;
+    left: -2%;
+    top: 5%;
+    z-index: -1;
+}
+.banner-svg-2{
+    position: absolute;
+    right: -1%;
+    top: 48%;
+    z-index: -1;
+}
+.banner-svg-2 > img{
+    transform: rotate(22deg);
+    width: 382px;
+}
+.banner-svg-3{
+    position: absolute;
+    left: -8%;
+    top: 48%;
+    /* z-index: -1; */
+}
+.banner-svg-3 > img{
+    width: 599px;
+    height: 599px;
 }
