--- a/style.css
+++ b/style.css
@@ -177,9 +177,44 @@ p {
     position: absolute;
     left: -8%;
     top: 48%;
-    /* z-index: -1; */
+    z-index: -1;
 }
 .banner-svg-3 > img{
     width: 599px;
     height: 599px;
+    transform: rotate(5deg);
+
+}
+.about{
+    text-align: center;
+    align-items: center;
+}
+
+.about-head{
+    line-height: 0px;
+    font-size: 40px;
+    font-weight: 400;
+    margin-top: 50px;
+    color: white;
+    font-family:'Alfa Slab One', cursive;
+}
+
+.about-text{
+    padding-top:20px ;
+    font-size: 24px;
+    font-weight: 400;
+    color: white;
+    margin-top: 20px;
+    font-family: "Aldrich", serif;
+}
+
+.about-text > p{
+    line-height: 35px;
+}
+
+.about-svg-1 > img{
+    margin-top: 80px;
+    width: 500px;
+    height: 500px;
+    z-index: -1;
 }
