--- a/style.css
+++ b/style.css
@@ -1,21 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Alfa+Slab+One&display=swap');
 
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 body {
     background-color: #0C042B;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 .container {
-
     display: flex;
     margin-top: 10px;
     justify-content: center;
@@ -27,10 +25,10 @@ p {
     color: white;
 }
 
+/* Navbar */
 .nav {
     width: 70%;
     background-color: rgba(36, 29, 64);
-    /* Only background is transparent */
     height: 70px;
     border-radius: 15px;
     display: flex;
@@ -54,7 +52,7 @@ p {
 
 .nav-links {
     display: flex;
-    gap: 20px;
+    gap: 40px;
     font-weight: 400;
 }
 
@@ -64,143 +62,131 @@ p {
     font-weight: bold;
 }
 
-.nav-button button {
-    background-color: #FFCC00;
-    color: #0C042B;
-    font-weight: bold;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-}
 
-.nav-button button:hover {
-    background-color: #FFD633;
-}
 
-.nav-svg{
-    z-index: -1;
+
+/* Navbar SVG */
+.nav-svg {
     position: absolute;
-    left: 67%;
-    top: -8.5%;
+    right: 3%;
+    top: 3%;
+    z-index: -1;
 }
+
+.nav-svg>img {
+    width: 255px;
+    height: 250px;
+    transform: rotate(5deg);
+}
+
+/* Banner */
 .banner {
     height: 100vh;
     margin-top: 90px;
     font-weight: 400;
-
     font-family: "Aldrich", serif;
     color: white;
+    text-align: center;
 }
 
 .banner-head {
-    text-align: center;
     font-size: 50px;
-
 }
 
 .banner-text {
-    text-align: center;
     line-height: 20px;
-
 }
 
-.join-button {
-    display: inline-block;
-    padding: 15px 40px;
-    font-size: 16px;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-    color: black;
-    background: linear-gradient(45deg, #6E7EF7, #C0837C, #E8853E);
-    border: 2px solid black;
-    border-radius: 11px;
-    cursor: pointer;
-    box-shadow: 3px 3px 0 black;
-    transform: rotate(7.5deg);
-    transition: all 0.2s ease-in-out;
-}
-
-.join-button:hover {
-    transform: rotate(7.5deg) scale(1.05);
-    box-shadow: 4px 4px 0 black;
-}
-
-/* Vector */
-
-.spiral {
-    position: relative;
-    left: 56.5%;
-    bottom: 1%;
-}
-
-.buyAndJoin{
+/* Buttons */
+.buyAndJoin {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 50px;
-    
+    gap: 20px;
 }
 
-.buy-now, .join-now{
+.buy-now,
+.join-now {
     background: none;
-    z-index: -1;
     border: none;
 }
-.buy-now img , .join-now img{
+
+.buy-now img {
+    width: 187px;
+
+}
+
+
+.buy-now:hover {
+    cursor: pointer;
+}
+
+/* Banner SVGs */
+.banner-svg-1 {
+    position: absolute;
+    left: -2%;
+    top: 10%;
+    z-index: -1;
+}
+
+.banner-svg-1>img {
+    width: 225px;
+    height: 210px;
+    transform: rotate(5deg);
+}
+
+.banner-svg-2 {
+    position: absolute;
+    right: 18%;
+    top: 60%;
+    z-index: -1;
+}
+
+.banner-svg-2>img {
+    transform: rotate(7deg);
+    width: 200px;
+    height: 175px;
+}
+
+.banner-svg-3 {
+    position: absolute;
+    left: 2%;
+    top: 73%;
+    z-index: -1;
+}
+
+.banner-svg-3>img {
+    width: 275px;
+    height: 275px;
+    transform: rotate(5deg);
+}
+
+.buy-now{
+    position: absolute;
+    top: 85%;   
+}
+.buy-now > img {
     width: 187px;
     height: 52px;
 }
-.join-now img {
-    width: 157.89px;
-}
-.buy-now :hover, .join-now :hover{
-   cursor: pointer;
-}
-.banner-svg-1{
-    position: absolute;
-    left: -2%;
-    top: 5%;
-    z-index: -1;
-}
-.banner-svg-2{
-    position: absolute;
-    right: -1%;
-    top: 48%;
-    z-index: -1;
-}
-.banner-svg-2 > img{
-    transform: rotate(22deg);
-    width: 382px;
-}
-.banner-svg-3{
-    position: absolute;
-    left: -8%;
-    top: 48%;
-    z-index: -1;
-}
-.banner-svg-3 > img{
-    width: 599px;
-    height: 599px;
-    transform: rotate(5deg);
 
-}
-.about{
+/* About Section */
+.about {
     text-align: center;
-    align-items: center;
+    padding: 50px 10%;
 }
 
-.about-head{
-    line-height: 0px;
+.about-head {
     font-size: 40px;
     font-weight: 400;
-    margin-top: 50px;
     color: white;
-    font-family:'Alfa Slab One', cursive;
+    font-family: 'Alfa Slab One', cursive;
 }
 
-.about-text{
-    padding-top:20px ;
+
+.about-text {
+    padding-top: 20px;
     font-size: 24px;
     font-weight: 400;
     color: white;
@@ -208,13 +194,37 @@ p {
     font-family: "Aldrich", serif;
 }
 
-.about-text > p{
+.about-text>p {
     line-height: 35px;
 }
+.spiral{
+    position: relative;
+    left: 8.5%;
+    top:-0.5%;
+}
 
-.about-svg-1 > img{
-    margin-top: 80px;
-    width: 500px;
-    height: 500px;
-    z-index: -1;
+.spiral > img {
+    width: 60px;
+    
+}
+
+/* About Section SVG */
+.about-svg-1 {
+    /* margin-top: 50px; */
+    text-align: center;
+    /* z-index: -1; */
+}
+
+.about-svg-1>img {
+    width: 650px;
+    height: 450px;
+}
+.footer{
+    background-color: #0C042B;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    font-family: "Aldrich", serif;
+    font-weight: 400;
+    font-size: 20px;
 }
